--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "ng-admin": "^0.9.1",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "fakerest": "^1.1.4"
   }
 }
